# hatTrick

./: README.md  pyproject.toml
hatTrick/: HATRX.py  __init__.py  _helpers.py  cli.py
hatTrick/decode/: HATRX.py  __init__.py  _helpers.py  cli.py
hatTrick/encode/: __init__.py  _helpers.py  cli.py  merger.py
tests/: test_continuous_decode.py  test_continuous_merge.py  test_decode.py  test_roundtrip.py  test_single_file_mode.py
